--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon server/index.js",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production --watch"
   },
   "repository": {
     "type": "git",
