--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.4",
+    "pg": "^8.3.3",
+    "pg-hstore": "^2.3.3",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "sequelize": "^6.3.4"
   },
   "devDependencies": {
     "husky": "^4.2.5",
