--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
   "homepage": "https://github.com/SoftwareDistrict/PotentialSound#readme",
   "dependencies": {
     "axios": "^0.20.0",
+    "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.4",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "pg": "^8.3.3",
     "pg-hstore": "^2.3.3",
     "react": "^16.13.1",
