--- a/.eslintrc
+++ b/.eslintrc
@@ -10,7 +10,7 @@
     "ecmaVersion": 2018
   },
   "rules": {
-    "no-console": "warn",
+    "no-console": ["error", {"allow": ["info", "warn"]}],
     "import/first": "error"
   }
 }
