--- a/.eslintrc
+++ b/.eslintrc
@@ -5,12 +5,19 @@
     "es6": true
   },
   "plugins": ["import", "require"],
-  "extends": "eslint:recommended",
+  "extends": ["eslint:recommended", "plugin:react/recommended", "plugin:json/recommended"],
+  "parser": "babel-eslint",
   "parserOptions": {
-    "ecmaVersion": 2018
+    "ecmaVersion": 2018,
+    "sourceType": "module"
   },
   "rules": {
     "no-console": ["error", {"allow": ["info", "warn"]}],
-    "import/first": "error"
+    "import/first": "error",
+    "indent": ["error", 2],
+    "eol-last": ["error", "always"],
+    "semi": ["error", "always"],
+    "func-style": ["error", "expression"],
+    "quotes": ["error", "double"]
   }
 }
