--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint:fix",
+      "pre-commit": "npm run lint && npm run format",
       "pre-push": "echo \"pre-push: Pre-push working...\""
     }
   }
