--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
   },
   "homepage": "https://github.com/SoftwareDistrict/PotentialSound#readme",
   "dependencies": {
+    "aws-sdk": "^2.746.0",
     "axios": "^0.20.0",
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
@@ -34,8 +37,10 @@
     "pg-hstore": "^2.3.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-images-upload": "^1.2.8",
     "react-router-dom": "^5.2.0",
-    "sequelize": "^6.3.4"
+    "sequelize": "^6.3.4",
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
@@ -43,6 +48,7 @@
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^4.2.2",
     "eslint": "^7.8.1",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-prettier": "^6.11.0",
@@ -52,8 +58,10 @@
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-react-hooks": "^4.1.0",
     "eslint-plugin-require": "0.0.1",
+    "file-loader": "^6.1.0",
     "husky": "^4.2.5",
     "prettier": "^2.1.1",
+    "style-loader": "^1.2.1",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
