--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "http": "0.0.1-security",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
     "nodemon": "^2.0.4",
@@ -40,6 +41,8 @@
     "react-images-upload": "^1.2.8",
     "react-router-dom": "^5.2.0",
     "sequelize": "^6.3.4",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
     "uuid": "^8.3.0"
   },
   "devDependencies": {
