--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "nodemon server/index.js",
     "build": "webpack --mode production",
+    "build-dev": "webpack -d --mode development",
     "lint": "eslint . --ext .js --ext .jsx --ext .json",
     "lint:fix": "eslint --fix .",
     "format": "prettier --write \"**/*.+(js|jsx|json|css|md)\""
