--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@fortawesome/react-fontawesome": "^0.1.11",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/styles": "^4.10.0",
     "@material-ui/system": "^4.9.14",
     "aws-sdk": "^2.746.0",
