--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "http": "0.0.1-security",
+    "moment": "^2.28.0",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
     "nodemon": "^2.0.4",
@@ -50,6 +51,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-images-upload": "^1.2.8",
+    "react-moment": "^0.9.7",
     "react-router-dom": "^5.2.0",
     "sequelize": "^6.3.4",
     "simple-peer": "^9.7.2",
