--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "http": "0.0.1-security",
+    "material-ui-image": "^3.2.3",
     "moment": "^2.28.0",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
