--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon server/index.js",
-    "build": "webpack --mode production",
+    "build": "webpack --mode production --watch",
     "build-dev": "webpack -d --mode development",
     "lint": "eslint . --ext .js --ext .jsx --ext .json",
     "lint:fix": "eslint --fix .",
@@ -55,6 +55,7 @@
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "styled-components": "^5.2.0",
+    "user-instagram": "^2.1.3",
     "uuid": "^8.3.0"
   },
   "devDependencies": {
