--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "favicons-webpack-plugin": "^4.2.0",
+    "html-webpack-plugin": "^4.4.1",
     "http": "0.0.1-security",
     "moment": "^2.28.0",
     "multer": "^1.4.2",
